Miscellaneous bug fixes and cleanup.

--- a/client/app/organizations/show/layouttemplate.jade
+++ b/client/app/organizations/show/layouttemplate.jade
@@ -1,5 +1,6 @@
-.view-container.organization-banner-container
-.view-container.organization-details-container
-.view-container.help-requests-container
-.view-container.recordings-container
-.view-container.people-container
+.organization-banner-container
+.view-container
+  .organization-details-container
+  .help-requests-container
+  .recordings-container
+  .people-container
