--- a/client/app/application/style.scss
+++ b/client/app/application/style.scss
@@ -1,10 +1,3 @@
-$application-padding: 20px;
-
-.application {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  padding: $application-padding;
+.app-content {
   padding-top: $navbar-height;
-  overflow-y: scroll;
 }
