--- a/client/app/shared/helprequests/collectiontemplate.jade
+++ b/client/app/shared/helprequests/collectiontemplate.jade
@@ -1,5 +1,6 @@
 include ../templates/loadmore.jade
 
-h2.tile-list-title Ways to help
-.help-requests-list.tile-container
-+loadmore
+if items.length > 0
+  h2.tile-list-title Ways to help
+  .help-requests-list.tile-container
+  +loadmore
