--- a/client/app/shared/howtos/collectiontemplate.jade
+++ b/client/app/shared/howtos/collectiontemplate.jade
@@ -1,5 +1,6 @@
 include ../templates/loadmore.jade
 
-h2.tile-list-title Things we've shared
-.howtos-list.tile-container
-+loadmore
+if items.length > 0
+  h2.tile-list-title Things we've shared
+  .howtos-list.tile-container
+  +loadmore
