--- a/client/app/shared/recordings/collectiontemplate.jade
+++ b/client/app/shared/recordings/collectiontemplate.jade
@@ -1,5 +1,6 @@
 include ../templates/loadmore.jade
 
-h2.tile-list-title Recordings
-.recordings-list.tile-container
-+loadmore
+if items.length > 0
+  h2.tile-list-title Recordings
+  .recordings-list.tile-container
+  +loadmore
