--- a/client/app/howtos/show/template.jade
+++ b/client/app/howtos/show/template.jade
@@ -1,8 +1,9 @@
 include ../../shared/components/edit-buttons
 
-div(model=cid, data-fields='*')
-  a(href=url).h1= title
-  p.contents!= contents
+
+a(href=url, model=cid, data-fields='title').h1= title
+p.contents
+  div(model=cid, data-editors='contents')!= contents
 +editButtons
 
 
