Integrate social links into org banner.

--- a/client/app/organizations/style.scss
+++ b/client/app/organizations/style.scss
@@ -44,7 +44,11 @@
   color: #fff;
   .fa {
     padding: 5px;
+    color: #fff;
     font-size: 1.5em;
+    &:hover {
+      color: #ddd;
+    }
   }
 }
 
