--- a/client/app/organizations/show/bannertemplate.jade
+++ b/client/app/organizations/show/bannertemplate.jade
@@ -4,7 +4,15 @@
     if city || state
       .organization-location= city + ', ' + state
     .organization-social-media-container
-      i.fa.fa-twitter
-      i.fa.fa-facebook
-      i.fa.fa-github
-      i.fa.fa-instagram
+      if (twitter)
+        a(href=twitter, target='_blank')
+          i.fa.fa-twitter
+      if (facebook)
+        a(href=facebook, target='_blank')
+          i.fa.fa-facebook
+      if (github)
+        a(href=github, target='_blank')
+          i.fa.fa-github
+      if (instagram)
+        a(href=instagram, target='_blank')
+          i.fa.fa-instagram
