Add login view, hook it up to backend.

--- a/client/app/header/template.jade
+++ b/client/app/header/template.jade
@@ -2,4 +2,4 @@ a.logo.inline-block.header-item(href='#') Media Public
 span.header-item.inline-block.header-menu
   each url, name in menuItems
     a.header-item.header-menu-item.inline-block(href=url)= name
-
+  span.header-item.inline-block.header-menu-item.log-in-out
