--- a/client/app/users/show/template.jade
+++ b/client/app/users/show/template.jade
@@ -1,5 +1,7 @@
 include ../../shared/components/edit-buttons
+include ../../shared/components/flash
 
++flash
 div(model=cid, data-fields='*')
   .h1= first + ' ' + last
   p.user-bio= bio
