Various bug fixes and improvemnts.

--- a/client/app/shared/people/collectiontemplate.jade
+++ b/client/app/shared/people/collectiontemplate.jade
@@ -1,6 +1,6 @@
 include ../templates/loadmore.jade
 
-if items.length > 0
+if !viewState.isEmpty
   h2.tile-list-title People
   .people-list.tile-container
   +loadmore
