--- a/client/app/shared/helprequests/collectiontemplate.jade
+++ b/client/app/shared/helprequests/collectiontemplate.jade
@@ -1,6 +1,6 @@
 include ../templates/loadmore.jade
 
-if items.length > 0
+if !viewState.isEmpty
   h2.tile-list-title Ways to help
   .help-requests-list.tile-container
   +loadmore
