--- a/client/app/shared/recordings/collectiontemplate.jade
+++ b/client/app/shared/recordings/collectiontemplate.jade
@@ -1,6 +1,6 @@
 include ../templates/loadmore.jade
 
-if items.length > 0
+if !viewState.isEmpty
   h2.tile-list-title Recordings
   .recordings-list.tile-container
   +loadmore
