Basic working search box view.

--- a/client/app/main.scss
+++ b/client/app/main.scss
@@ -7,3 +7,5 @@
 @import 'organizations/style';
 @import 'shared/people/style';
 @import 'users/style';
+@import 'shared/search/style';
+@import 'index/style';
