--- a/client/app/shared/howtos/collectiontemplate.jade
+++ b/client/app/shared/howtos/collectiontemplate.jade
@@ -1,6 +1,6 @@
 include ../templates/loadmore.jade
 
 if !viewState.isEmpty
-  h2.tile-list-title Things we've shared
+  h2.tile-list-title Howtos
   .howtos-list.tile-container
   +loadmore
