--- a/client/app/users/show/template.jade
+++ b/client/app/users/show/template.jade
@@ -3,7 +3,7 @@ include ../../shared/components/flash
 
 +flash
 div(model=cid, data-fields='*')
-  .h1= first + ' ' + last
+  .h1= display_name
   p.user-bio= bio
 +editButtons
 
