--- a/mockups/css/master.css
+++ b/mockups/css/master.css
@@ -111,3 +111,177 @@ button:hover {
 input:focus, select:focus, button:focus {
 	outline: 1px solid blue;
 }
+
+/* HEADER */
+.mobile {
+	display: none;
+}
+
+@media (max-width: 600px) {
+	.mobile {
+		display: inline-block;
+	}
+
+	#header {
+		height: 40px;
+		background-color: #112e51;
+		color: white;
+	}
+
+	.title p.display {
+		font-size: 30px;
+		float: left;
+		margin-left: 1em;
+	}
+
+	.title p.mobile {
+		float: right;
+		margin-right: 1em;
+		margin-top: .5em;
+	}
+
+	#login {
+		display: none;
+	}
+}
+
+@media (min-width: 401px) and (max-width: 800px) {
+	.mobile {
+		display: none;
+	}
+	
+	#header {
+		padding-top: 0;
+
+		background-color: #112e51;
+		color: white;
+
+		overflow: hidden;
+
+		margin-bottom: 1em;
+	}
+
+	#header #login {
+		display: inline-block;
+
+		font-size: 20px;
+
+		background-color: #dce4ef;
+		padding: 2px 5px;
+		border-radius: 2px;
+
+		margin-top: .25em;
+		margin-right: .5em;
+
+		float: right;
+	}
+
+	#header #login a {
+		padding-right: 1em;
+		padding-left: 1em;
+	}
+
+	#header #login a:first-child {
+		border-right: 1px solid #212121;
+	}
+
+	#header .title {
+		margin-left: 1em;
+	}
+
+	#header .title .display {
+		font-size: 30px;
+	}
+}
+
+@media (min-width: 801px) {
+	#header {
+		position: relative;
+
+		min-height: 50px;
+		
+		background-color: #112e51;
+	}
+
+	#header #login {
+		display: inline-block;
+
+		position: absolute;
+		top: .5em;
+		right: 1em;
+
+		background-color: #dce4ef;
+		padding: 2px 10px;
+		border-radius: 2px;
+	}
+
+	#header #login a {
+		padding-left: .5em;
+	}
+
+	#header #login a:first-child {
+		padding-right: .5em;
+		padding-left: 0;
+		border-right: 1px solid #212121;
+	}
+
+	#header .title {
+		position: absolute;
+		bottom: 0.5em;
+		left: 1em;
+
+		color: white;
+	}
+
+	#header .title .display {
+		font-size: 30px;
+	}
+}
+
+@media (min-width: 1401px) {
+}
+
+/* FOOTER */
+@media (max-width: 600px) {
+	#footer {
+		color: white;
+
+		text-align: center;
+
+		background-color: #323a45;
+
+		margin-top: 1em;
+	}
+}
+
+@media (min-width: 401px) and (max-width: 800px) {
+	#footer {
+		color: white;
+
+		text-align: center;
+
+		background-color: #323a45;
+	}
+}
+
+@media (min-width: 801px) {
+	#footer {
+		margin-top: 1em;
+
+		color: white;
+
+		text-align: center;
+
+		background-color: #323a45;
+
+		overflow: none;
+	}
+
+	#footer p {
+		padding: 20px 0;
+		margin: auto;
+	}
+}
+
+@media (min-width: 1401px) {
+}
