A bunch of homepage and header changes.

--- a/client/app/header/loginout.jade
+++ b/client/app/header/loginout.jade
@@ -8,3 +8,5 @@ else
   .logged-out
     form(action=app.config.apiUrl + '/auth/login/twitter', name='twitterLogin')
     a(href='javascript:document.twitterLogin.submit()').log-in Log in
+    | &nbsp; | &nbsp;
+    a(href='javascript:document.twitterLogin.submit()').log-in Sign up
