--- a/client/app/index.jade
+++ b/client/app/index.jade
@@ -8,6 +8,6 @@ html
     link(rel='stylesheet', href=mainCss, type='text/css')
     link(rel='stylesheet', href='/css/lib/font-awesome/font-awesome.css', type='text/css')
     link(href='http://fonts.googleapis.com/css?family=Raleway|Open+Sans+Condensed:300,700', rel='stylesheet', type='text/css')
-  body
+  body.initial
     .application
     script(src=mainJs)
