--- a/client/app/index/layouttemplate.jade
+++ b/client/app/index/layouttemplate.jade
@@ -1,1 +1,6 @@
+.homepage-banner
+  .homepage-banner-title
+    h1 Media Public
+    span.subtitle Putting the public back in public media
 .view-container.homepage-search
+.view-container.homepage-tiles
