--- a/client/app/shared/components/tile.jade
+++ b/client/app/shared/components/tile.jade
@@ -1,7 +1,6 @@
 a(href="\##{permalink}")
   block image
-    - var color = app.templateHelpers.randomColor(cid);
-    .tile-image(style="background-color: #{color}")
+    .tile-image
   .tile-text
     .tile-title
       block title
