--- a/client/app/shared/style/variables.scss
+++ b/client/app/shared/style/variables.scss
@@ -1,3 +1,7 @@
 $borderGray: #999;
 $viewWidth: 992px;
 $viewPadding: 40px;
+$lighter-blue: #dce4ef;
+$light-blue: #0071bc;
+$dark-blue: #112e51;
+$medium-blue: #205493;
