--- a/client/app/_bootstrap-custom.scss
+++ b/client/app/_bootstrap-custom.scss
@@ -16,7 +16,7 @@
 // $gray-light:             lighten($gray-base, 46.7%) // #777
 // $gray-lighter:           lighten($gray-base, 93.5%) // #eee
 
-// $brand-primary:         darken(#428bca, 6.5%) // #337ab7
+$brand-primary:         $dark-blue;
 // $brand-success:         #5cb85c
 // $brand-info:            #5bc0de
 // $brand-warning:         #f0ad4e
@@ -370,12 +370,12 @@
 // $navbar-padding-vertical:          (($navbar-height - $line-height-computed) / 2)
 // $navbar-collapse-max-height:       340px
 
-// $navbar-default-color:             #777
-// $navbar-default-bg:                #f8f8f8
-// $navbar-default-border:            darken($navbar-default-bg, 6.5%)
+$navbar-default-color:             #fff;
+$navbar-default-bg:                $dark-blue;
+$navbar-default-border:            $navbar-default-bg;
 
 // Navbar links
-// $navbar-default-link-color:                #777
+$navbar-default-link-color:                #fff;
 // $navbar-default-link-hover-color:          #333
 // $navbar-default-link-hover-bg:             transparent
 // $navbar-default-link-active-color:         #555
