--- a/client/app/shared/components/tile.scss
+++ b/client/app/shared/components/tile.scss
@@ -14,8 +14,12 @@
   right: 0;
   bottom: 0;
   left: 0;
-  background-color: #777;
   background-size: cover;
+  background-color: $medium-blue;
+
+  &:hover {
+    background-color: $light-blue;
+  }
 }
 
 .tile-title {
