--- a/client/app/shared/people/singletemplate.jade
+++ b/client/app/shared/people/singletemplate.jade
@@ -1,14 +1,14 @@
-extends ../components/tile.jade
+- if (profile_picture) var style = style + "background-image: url(" + profile_picture + ")";
 
-block image
-  - if (profile_picture) var style = style + "background-image: url(" + profile_picture + ")";
-  .tile-image(style=style)
-block title
-  = display_name
-block more
-  = bio
-  .social-media-links
-    i.fa.fa-twitter
-    i.fa.fa-facebook
-    i.fa.fa-github
-    i.fa.fa-instagram
+a(href="\##{permalink}")
+  .user-tile-image(style=style)
+  .user-tile-text
+    .user-tile-title
+      = display_name
+    .user-tile-more
+      = app.templateHelpers.truncate(bio, 250)
+      .social-media-links
+        i.fa.fa-twitter
+        i.fa.fa-facebook
+        i.fa.fa-github
+        i.fa.fa-instagram
