--- a/client/app/shared/people/style.scss
+++ b/client/app/shared/people/style.scss
@@ -6,11 +6,108 @@
   }
 }
 
-@media (max-width: $screen-sm-max) {
+@media (max-width: $screen-xs-max) {
   .person-container {
     .social-media-links {
       position: static;
       text-align: left;
     }
+  }
+}
+
+.user-tile {
+  position: relative;
+  display: inline-block;
+  width: calc(20% - 10px);
+  margin: 5px;
+  padding-bottom: calc(20% - 10px);
+  overflow: hidden;
+}
+
+.user-tile-image {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-size: cover;
+  background-color: $medium-blue;
+
+  &:hover {
+    background-color: $light-blue;
+  }
+}
+
+.user-tile-title {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 10px;
+  color: #ddd;
+  background-color: rgba(35, 35, 35, .5);
+}
+
+.user-tile-more {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  padding: 10px;
+  transition: all .2s ease-out;
+  transform: translateY(100%);
+  color: #fff;
+  background-color: rgba(35, 35, 35, 1);
+}
+
+.user-tile:hover .user-tile-more {
+  transform: translateY(0);
+}
+
+@media (max-width: $screen-xs-max) {
+  .user-tile {
+    display: block;
+    width: 100%;
+    margin: 10px 0;
+    padding-bottom: 20px;
+    border: none;
+  }
+
+  .user-tile-image {
+    position: static;
+    display: inline-block;
+    width: 30%;
+    padding-bottom: 30%;
+    vertical-align: top;
+  }
+
+  .user-tile-text {
+    display: inline-block;
+    width: 70%;
+    padding: 0 20px;
+    box-sizing: border-box;
+    vertical-align: top;
+  }
+  .user-tile-title {
+    position: static;
+    padding: 0;
+    font-weight: bold;
+    color: #000;
+    background-color: #fff;
+  }
+
+  .user-tile-more {
+    position: static;
+    width: 100%;
+    margin-top: 10px;
+    padding: 0;
+    transition: none;
+    transform: translateY(0);
+    color: #000;
+    background-color: #fff;
+  }
+
+  .user-tile:hover .user-tile-more {
+    transform: translateY(0);
   }
 }
