A slightly more complete homepage.

--- a/client/app/index/layouttemplate.jade
+++ b/client/app/index/layouttemplate.jade
@@ -1,6 +1,9 @@
 .homepage-banner
-  .homepage-banner-title
-    h1 Media Public
-    span.subtitle Putting the public back in public media
-.view-container.homepage-search
+  .homepage-banner-contents
+    .homepage-banner-title
+      h1 Media Public
+      span.subtitle Putting the public back in public media
+    .view-container.homepage-search
+.view-container
+  p There are almost 1000 public media stations in the US.  Some of them are big and some of them are small, but all of them serve their local communities with a really great service.  MediaPublic helps big stations and small stations alike by promoting the sharing of knowledge, experience, and best practices while bringing the content that those stations create together all in one place.  We invite members from all stations to share their experiences on what they believe is the best way to bring such a valuable service to their local communities with the MediaPublic platform.  MediaPublic is a one-stop-shop for those inside and outside of Public Media.
 .view-container.homepage-tiles
