Add admin controls for associated users.

--- a/client/app/shared/people/style.scss
+++ b/client/app/shared/people/style.scss
@@ -14,3 +14,15 @@
     }
   }
 }
+
+.approve {
+  color: $brand-success;
+}
+
+.reject {
+  color: $brand-danger;
+}
+
+.approve, .reject {
+  padding: 5px;
+}
