--- a/client/app/shared/people/singletemplate.jade
+++ b/client/app/shared/people/singletemplate.jade
@@ -7,6 +7,10 @@ block title
   = display_name
 block more
   = bio
+  if viewState.needsApproval
+    .user-approval-controls
+      i.fa.fa-check.approve(title='Approve this user\'s request to be associated with your organization.')
+      i.fa.fa-times.reject(title='Reject this user\'s request to be associated with your organization.')
   .social-media-links
     i.fa.fa-twitter
     i.fa.fa-facebook
