--- a/client/app/shared/people/style.scss
+++ b/client/app/shared/people/style.scss
@@ -15,6 +15,18 @@
   }
 }
 
+.approve {
+  color: $brand-success;
+}
+
+.reject {
+  color: $brand-danger;
+}
+
+.approve, .reject {
+  padding: 5px;
+}
+
 .user-tile {
   position: relative;
   display: inline-block;
