Change the searched over datasets.

--- a/client/app/searchresults/layouttemplate.jade
+++ b/client/app/searchresults/layouttemplate.jade
@@ -2,5 +2,5 @@
   .search-container
   .organizations-container
   .howtos-container
-  .recordings-container
+  .helprequests-container
   .people-container
