--- a/client/app/shared/helprequests/collectiontemplate.jade
+++ b/client/app/shared/helprequests/collectiontemplate.jade
@@ -1,6 +1,9 @@
 include ../templates/loadmore.jade
 
-if !viewState.isEmpty
-  h2.tile-list-title Ways to help
+if (!viewState.isEmpty || viewState.isOrgAdmin)
+  h2.tile-list-title
+    | Ways to help &nbsp;
+    if (viewState.isOrgAdmin)
+      a.fa.fa-plus(href="#/help-requests/new", title="Add a request for help.")
   .help-requests-list.tile-container
   +loadmore
