--- a/client/app/shared/people/collectiontemplate.jade
+++ b/client/app/shared/people/collectiontemplate.jade
@@ -1,6 +1,9 @@
 include ../templates/loadmore.jade
 
-if !viewState.isEmpty
-  h2.tile-list-title People
+if (!viewState.isEmpty || viewState.isOrgAdmin)
+  h2.tile-list-title
+    | People&nbsp;
+    if (viewState.isOrgAdmin)
+      a.fa.fa-plus(href="#/people/new", title="List a person in your organization.")
   .people-list.tile-container
   +loadmore
