--- a/client/app/shared/recordings/collectiontemplate.jade
+++ b/client/app/shared/recordings/collectiontemplate.jade
@@ -1,6 +1,9 @@
 include ../templates/loadmore.jade
 
-if !viewState.isEmpty
-  h2.tile-list-title Recordings
+if (!viewState.isEmpty || viewState.isOrgAdmin)
+  h2.tile-list-title
+    | Recordings &nbsp;
+    if (viewState.isOrgAdmin)
+      a.fa.fa-plus(href="#/recordings/new", title="Add a recording to your organization.")
   .recordings-list.tile-container
   +loadmore
